syntax = "proto3";

package dast;

import "common.proto";





message DastMsg {
    int64 txn_id = 1;
    repeated common.Read_Struct read_set = 2;
    repeated common.Write_Struct write_set = 3;
    common.TxnOP op = 5;
    int32 from = 6;
    uint64 timestamp = 7;
    optional common.TxnType txn_type = 8;
}


service Dast {
    rpc TxnMsg(DastMsg) returns (DastMsg) {}
}

