syntax = "proto3";

package yuxi;

import "common.proto";


message YuxiMsg {
    int64 txn_id = 1;
    repeated common.Read_Struct read_set = 2;
    repeated common.Write_Struct write_set = 3;
    repeated int32 executor_ids = 4;
    YuxiOP op = 5;
    int32 from = 6;
}


enum YuxiOP {
    ReadOnly = 0;
    Prepare = 1;
    Accept = 2;
    Commit = 3;
    ReadOnlyRes = 4;
    PrepareRes = 5;
    AcceptRes = 6;
    CommitRes = 7;
}


service Yuxi {
    rpc YuxiTxn(YuxiMsg) returns (YuxiMsg) {}
}

